--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,6 +19,7 @@
         </div>
     </div>
 
+    <script src="{{ url_for('static', filename='markdown/lib/markdown.js') }}"></script>
     <script src="{{ url_for('static', filename='script/main.js') }}"></script>
 </body>
 
