--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>Firefly AI</title>
-    <link href="{{ url_for('static', filename='style/main.css') }}" rel="stylesheet" type="text/css" />
+    <link href="img/logo.png" rel='icon' />
+    <link href="style/main.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -14,13 +15,12 @@
         </div>
         <div id="chat-content"></div>
         <div id="chat-input">
-            <input id="message" type="text" placeholder="Type your message..." />
+            <textarea id="message" type="text" placeholder="输入你的问题和内容..." ></textarea>
             <button onclick="sendMessage()">发送消息</button>
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='markdown/lib/markdown.js') }}"></script>
-    <script src="{{ url_for('static', filename='script/main.js') }}"></script>
+    <script src="script/main.js"></script>
 </body>
 
 </html>
